# WallpaperIA

./: .gitignore  CLAUDE.md  compile_screenmap.bat
ComfyUIBot/: README.md  config.json.example  uploader.php
api/: .credentials  .htaccess  FILE_MAPPINGS_FORMAT.md  README.md  USAGE_POST_WALLPAPER.md  WallpaperAPI.class.php  debug_auth.php  decrypt_and_serve.php  encrypt_and_upload.php  index.php  memory_info.php  start_server.bat  upload_endpoint.php  uploader.html  wallpapers.csv
app/: CMakeLists.txt  MULTILANG_README.md  WallpaperIA.pro  build.bat  build_debug.bat  build_vs2022.bat  config.h  create_portable.bat  deploy.bat  lang_de.h  lang_en.h  lang_es.h  lang_fr.h  lang_it.h  lang_pt.h  lang_ru.h  language.h  main.cpp  resources.qrc  screenmap.cpp  test_debug.bat
app/docs/: README.md
app/src/config/: startup_manager.cpp  startup_manager.h
app/src/core/: wallpaper_builder.cpp  wallpaper_builder.h
app/src/system/: wallpaper_manager.cpp  wallpaper_manager.h
app/src/utils/: date_helper.cpp  date_helper.h  logger.h  path_helper.cpp  path_helper.h  utils.cpp  utils.h
app/src/widgets/: apply_category_dialog.cpp  apply_category_dialog.h  countdown_widget.cpp  countdown_widget.h  hover_filters.cpp  hover_filters.h  screen_selector.cpp  screen_selector.h  toggle_switch.cpp  toggle_switch.h
carrousel_categories/: carrousel.css  carrousel.js  index.html
frontend/: .gitignore  DEPLOYMENT.md  README.md  astro.config.mjs  package-lock.json  package.json
installer/: .gitignore  README.md  WallpaperAI.nsi  WallpaperAI_Multilang.nsi  build_installer.bat  (+2 more)
(+90 files in other folders)
